--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "dependencies": {
     "express": "^4.17.1",
+    "isomorphic-unfetch": "^3.0.0",
     "next": "^9.0.5",
     "nodemon": "^1.19.2",
     "react": "^16.9.0",
@@ -13,7 +14,6 @@
   },
   "devDependencies": {},
   "scripts": {
-  
     "dev": "nodemon server.js"
   },
   "author": "",
